kermeta_projects/fr.irisa.triskell.kermeta.io/test/typechecher_tests/invalid/SimpleCtrlStructs.kmt
/* $Id: SimpleCtrlStructs.kmt,v 1.1 2005-04-20 23:58:29 ffleurey Exp $ */

// Type checking on wrong simple control stucts

package tctest;

class A {}

class B inherits A {}

class Test {

	operation test1() : Void is do
		b := if a == b then a else b end
	end
	
	operation test2() : Void is do
		b := if a then b end
	end
	
	operation test3() : Void is do
		b := if 3 then b else void end
	end
	
	operation test4() : Void is do
		from a := b
		until "coucou"
		loop
			b ?= a
		end
	end
	
	operation test5() : Void is do
		a ?= if a.getMetaClass == A then a else B end.new
	end
	
	operation test6() : Void is do
		b := b.getMetaClass.new
	end
	
	operation test7() : Void is do
		if not a.equals(b) and 6 then
			var x : A init a
			a := b
			b := x
		end
	end
	
	attribut a : A
	attribut b : B

}

/* END OF FILE */